--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -6,6 +6,23 @@
 
 <MudGrid Justify="Justify.Center" Class="mb-15">
     <MudItem xs="12">
+        <MudPaper Elevation="0" Class="p-2 mt-3 d-flex justify-end">
+            <WizardModal @bind-Open="OpenWizard">
+            </WizardModal>
+            <MudButton Class="ma-0 fw-bolder"
+                       Disabled="@AppStatus.IsDemoMode"
+                       OnClick="@((c) => { OpenWizard = true; return Task.CompletedTask; })"
+                       Size="Size.Medium"
+                       ButtonType="ButtonType.Button"
+                       Variant="Variant.Filled"
+                       Color="Color.Info"
+                       StartIcon="@Icons.Material.Filled.AutoFixHigh">Setup Wizard</MudButton>
+            <DocTooltipIcon OptionalRootClass="align-self-center" DocSnippetHeader="Setup Wizard" DocSnippetType="DocSnippetType.SetupWizard" IconTitle="Using the Setup Wizard" />
+
+
+        </MudPaper>
+    </MudItem>
+    <MudItem xs="12">
         <MudPaper Elevation="2" Class="p-2">
             <AppSetupStatus />
         </MudPaper>
@@ -21,3 +38,6 @@
         </MudPaper>
     </MudItem>
 </MudGrid>
+@code {
+    bool OpenWizard = false;
+}
