--- a/Energy.App.Standalone/src/scss/app/app.scss
+++ b/Energy.App.Standalone/src/scss/app/app.scss
@@ -274,6 +274,10 @@ h1:focus {
     a {
         text-decoration: none;
     }
+
+    .mud-nav-link {
+        margin-top: 8px;
+    }
 }
 
 .active-navbar-item {
