--- a/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
@@ -1,4 +1,5 @@
 ﻿@using Energy.App.Standalone.Pages.HtmlContentFiles
+@inject AppStatus AppStatus
 
 <MudPaper Class="pa-5">
     <MudText Typo="Typo.body1" Align="Align.Start">
@@ -17,18 +18,33 @@
                     whole seasonal energy costs, simply with a mouse scroll (or a swipe)</li>
             </ul>
 
-            <p>
-                <strong>This is a hobby project, and a beta version of the application.</strong> Feedback is much appreciated and
-                will help determine whether the app provides enough value to warrant maintaining and developing further. Please feel free to email me at <MudLink
-                    Href="mailto:explainmyenergy@solores-software.net">explainmyenergy@solores-software.net</MudLink> with any
-                problems, comments or suggestions.
-            </p>
+            
             <ul class="ml-3">
+                @if (AppStatus.IsDemoMode)
+                {
+                    <li>
+                        This is a <strong>Demo Version</strong> of the app. No setup functionality is available, instead, the app is pre-configured with example data. 
+                        Instead, you can explore the app, and see the Analysis it can provide, along with the typical setup data required.
+                        The live version, with full functionality, is available at <MudLink Href="https://explainmyenergy.net">explainmyenergy.net</MudLink>
+                    </li>
+                }
+                else
+                {
+
+                    <li>To view a demo version, with setup pre-configured with example data, go to <MudLink Href="https://demo.explainmyenergy.net">demo.explainmyenergy.net</MudLink></li>
+                }
                 <li>The app doesn't sell energy; doesn't sell your data; it doesn't collect your
                 data. There is no sign up, no login, no cookies, no tracking, no ads.</li>
             <li>The app uses Blazor WebAssembly process everything on your device.</li>
-            <li>To view a demo version, with setup pre-configured with example data, go to <MudLink Href="https://demo.explainmyenergy.net">demo.explainmyenergy.net</MudLink></li>
+
+                
             </ul>
+
+            <p>
+                <strong>This is a hobby project, and a beta version of the application.</strong> Feedback is much appreciated and
+                will help determine whether the app provides enough value to warrant maintaining and developing further. Please feel free to email me at <MudLink Href="mailto:explainmyenergy@solores-software.net">explainmyenergy@solores-software.net</MudLink> with any
+                problems, comments or suggestions.
+            </p>
 
             <p><strong>Explain My Energy's</strong> Terms &amp; Conditions can be viewed here: <MudLink aria-haspopup="dialog"
                     OnClick="ShowTermsDialog">Terms &amp; Conditions</MudLink>
