--- a/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataTablePage.razor
+++ b/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataTablePage.razor
@@ -66,7 +66,7 @@
                         </HeaderContent>
 
                         <RowTemplate>
-                            <MudTd DataLabel="Date">@context.UtcTime.ToShortDateString()</MudTd>
+                            <MudTd DataLabel="Date">@context.UtcTime.eDateToDowShortMonthYY()</MudTd>
                             <MudTd DataLabel="Temp. Avg ℃">@context.TemperatureAverage</MudTd>
                             <MudTd DataLabel="Historical?">@context.IsHistorical</MudTd>
                             <MudTd DataLabel="Recent Forecast?">@context.IsRecentForecast</MudTd>
