Trying out different things

--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -53,7 +53,10 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
-
+ 
+    <script src="_content/DnetIndexedDb/rxjs.min.js"></script>
+    <script src="_content/DnetIndexedDb/dnet-indexeddb.js"></script>
+    
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script src="../ts/index.ts"></script>
