Fix to set invariant culture for postal area search

--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -39,7 +39,8 @@
                                       T="OutCode" CoerceText="true"
                                       Clearable="true"
                                       Placeholder="Postal Area"
-                                              Required
+                                      Culture="@System.Globalization.CultureInfo.InvariantCulture"
+                                      Required
                                       Disabled="@AppConfig.IsDemoMode"
                                       ShowProgressIndicator="true" ToStringFunc="@(outCode => outCode.OutCodeCharacters)"
                                       MinCharacters="2"
