Update build for public release

--- a/Energy.App.Standalone/Pages/TermsAndConditionsPage.razor
+++ b/Energy.App.Standalone/Pages/TermsAndConditionsPage.razor
@@ -1,6 +1,9 @@
 ﻿@page "/TermsAndConditions"
 @using Energy.App.Standalone.Pages.HtmlContentFiles
 <ExtendedPageTitle>Terms &amp; Conditions</ExtendedPageTitle>
+<HeadContent>
+    <link rel="canonical" href="https://explainmyenergy.net/TermsAndConditions" />
+</HeadContent>
 <div class="mt-3"></div>
 
 <TermsAndConditionsContents />
