--- a/Energy.App.Standalone/src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGenerationTemplate.hbs
+++ b/Energy.App.Standalone/src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGenerationTemplate.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> {{emeAppName}} - Credits, Attributions &amp; Licenses </title>
-
+    <meta name="robots" content="noindex">
     <link href="{{{emeCreditsAndLicensesCss}}}" rel="stylesheet" />
 </head>
 
@@ -20,8 +20,7 @@
                 <ul>
                     <li>
                         <p>
-                            The free consumer API from made available by n3rgy at <a rel="nofollow"
-                                                                                     href="https://www.n3rgy.com/consumer/">
+                            The free consumer API from made available by n3rgy at <a href="https://www.n3rgy.com/consumer/">
                                 n3rgy
                                 Consumer Portal
                             </a>
@@ -29,8 +28,7 @@
                     </li>
                     <li>
                         <p>
-                            Open-Meteo, an amazing and comprehensive weather API service at <a rel="nofollow"
-                                                                                               href="https://open-meteo.com">open-meteo.com</a>
+                            Open-Meteo, an amazing and comprehensive weather API service at <a href="https://open-meteo.com">open-meteo.com</a>
                         </p>
                         <div class="eme--api-attribution-detail">
                             <p>
@@ -45,7 +43,7 @@
                     <li>
                         <p>
                             postcodes.io, a great Open Data API for resolving UK
-                            postcodes. Find it here at <a rel="nofollow" href="https://postcodes.io">postcodes.io</a>.
+                            postcodes. Find it here at <a href="https://postcodes.io">postcodes.io</a>.
                             The postcodes.io API is licensed under the <strong>MIT License</strong>, a copy is available
                             here at their repository here <a rel="nofollow"
                                                              href="https://github.com/ideal-postcodes/postcodes.io/blob/master/LICENSE">github.com/ideal-postcodes/postcodes.io</a>
