--- a/Energy.App.Standalone/Pages/PrivacyPolicyPage.razor
+++ b/Energy.App.Standalone/Pages/PrivacyPolicyPage.razor
@@ -1,7 +1,9 @@
 ﻿@page "/PrivacyPolicy"
 @using Energy.App.Standalone.Pages.HtmlContentFiles
 <ExtendedPageTitle>Privacy Policy</ExtendedPageTitle>
-
+<HeadContent>
+    <link rel="canonical" href="https://explainmyenergy.net/PrivacyPolicy" />
+</HeadContent>
 <div class="mt-3"></div>
 
 <PrivacyPolicyContents />
