Readme and docs update

--- a/Energy.App.Standalone/Pages/HtmlContentFiles/PrivacyPolicyContents.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/PrivacyPolicyContents.razor
@@ -48,7 +48,8 @@
     <h5>7. Application Performance Monitoring and Logging</h5>
     <p>
         At present, we do not implement any application performance monitoring. However, we may introduce this at a later date purely for resolving issues and improving the application's performance.
-        If we implement such services in the future, this privacy policy will be updated accordingly, and you will be notified of any changes.
+        If we implement such services in the future, this privacy policy will be updated accordingly, and you will be notified of any changes. This data is anonymous and will only contain data on application errors and usage, and will not collect any user-related data such as energy readings.
+        It will be possible to opt-out of this service.
     </p>
 
     <h5>8. Your Rights</h5>
@@ -56,6 +57,7 @@
     <p>As described above, you can change this information in the <a href="/Setup">setup page</a>, as well as delete it completely.</p>
     <p>You can also use the mechanisms provided by your browser to view, change or delete this data.</p>
     <p>The application uses local storage - in Chrome and Edge, for example, you can view, change or delete this data by opening the developer tools (F12), and navigating to the Application tab, where you will see Local Storage. You must also be on the Explain My Energy page to see this data.</p>
+    
     <h5>9. Changes to this Privacy Policy</h5>
     <p>We may update this privacy policy from time to time. We will notify you of any changes by posting the updated policy on the application. We encourage you to review this policy periodically to stay informed about how we handle your information.</p>
 
